<resources>
    <string name="app_name">Closed CircuitApplication</string>
    <string name="action_settings">Settings</string>
    <string name="previous">Previous</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="create_a_planTv">Create a Plan</string>
    <string name="password_recovery_text">Password Recovery</string>
    <string name="you_re_almost_close_to_recovering_your_password_text">You’re almost close to recovering your password. A code has been sent to your email address, please enter code to proceed.</string>
    <string name="you_entered_a_wrong_code_text">You entered a wrong code, please enter code correctly</string>
    <string name="didn_t_recieve_email_resend_text">Didn\'t receive email? resend</string>
    <string name="all_password_recovery_text">Password Recovery</string>
    <string name="we_are_here_to_help_you_recover_your_password_text">We are here to help you recover your password, please enter your registered email address below.</string>
    <string name="email_text">Email</string>
    <string name="recover_password_text">Recover Password</string>
    <string name="remember_password_login_text">Remember password? Login</string>
    <string name="password_recovery_n_sucessful_text">Password Recovery\nSuccessful</string>
    <string name="all_congratulations_text">Congratulations</string>
    <string name="please_proceed_to_login_into_your_account_text">Please proceed to login into your account.</string>
    <string name="all_reset_your_password_text">Reset your password</string>
    <string name="finally_here_text">Finally we are here!\nCreate new password and let’s continue.</string>
    <string name="enter_a_new_password_text">Enter a new password</string>
    <string name="onBoarding_title">Easily raise funds for your business or project</string>
    <string name="onBoarding_description">Start a business or project and get your family, friends or well wishers to financially support from anywhere in the world.</string>
    <string name="skip">Skip</string>
    <string name="get_guided_execution_create_a_budget_and_action_steps">Get guided execution. Create a budget and action steps</string>
    <string name="follow_the_guided_steps_on_execution_of_your_business_or_project_to_unlock_funds_and_stay_accountable_to_your_sponsors">Follow the guided steps on execution of your business or project to unlock funds and stay accountable to your sponsors.</string>
    <string name="support_incubate_and_mentor_with_your_financial_contributions">Support, incubate and mentor with your financial contributions</string>
    <string name="ensure_your_financial_contributions_are_meaningfully_used_to_establish_success_in_the_business_or_project_funded">Ensure your financial contributions are meaningfully used to establish success in the business or project funded.</string>
    <string name="discover_diligently_executed_ideas_to_invest_in">Discover diligently executed ideas to invest in</string>
    <string name="discover_investment_opportunities_in_star_performing_businesses_or_projects_on_the_platform">Discover investment opportunities in star performing businesses or projects on the platform.</string>
    <string name="start_a_business_or_project_and_get_your_family_friends_or_wellwishers_to_financially_support_from_anywhere_in_the_world">Start a business or project and get your family, friends or well wishers to financially support from anywhere in the world.</string>
    <string name="welcome_back">welcome Back</string>
    <string name="welcome_back_detail_text">We are happy to see you, login into your account to continue managing your dreams with us.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?<font color='#0386FF'>    Create an Account</font></string>
    <string name="create_an_account">Create an Account</string>
    <string name="to_login">to login</string>
    <string name="please_wait">Please wait…</string>
    <string name="successfully_logged_in">Successfully Logged In</string>
    <string name="email_or_password_is_incorrect">Email or Password is incorrect</string>
    <string name="shared_building_shared_prosperity">Shared Building. Shared Prosperity</string>
    <string name="check_your_email">Check Your Email</string>
    <string name="verify_email_address">Verify Email Address</string>
    <string name="four_digit_details">A four-digit code has been sent to your Email, please enter code.</string>
    <string name="didn_t_receive_email_resend">Didn\'t receive email? <font color='#0386FF'>resend</font></string>
    <string name="you_entered_a_wrong_code">You entered a wrong code, please enter code correctly</string>
    <string name="or">Or</string>
    <string name="login_with_google">Login with Google</string>
    <string name="login_with_apple">Login with Apple</string>
    <string name="quote">To run fast, run alone. To run far, run together. Together we can achieve greater things</string>
    <string name="registerUsingGoogle">Register with Google</string>
    <string name="createAccount">Create an Account</string>
    <string name="welcome">welcome</string>
    <string name="already_have_and_account">Already have an account? </string>
    <string name="total_funds_raised">Total Funds Raised</string>
    <string name="welcome_description">We are happy to have you on board. To start raising funds for your business or project, you need to create a plan.</string>
    <string name="create_a_plan">Create a plan</string>
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="no_sponsor_description">Patience, you currently do not have any Sponsors. Share your link to family and friends.</string>
    <string name="menu_message">Message</string>
    <string name="menu_account">Account</string>
    <string name="floating_action_button_desc">Floating action button</string>
    <string name="share_link">share link</string>
    <string name="recent_donations">Recent Donations</string>
    <string name="not_started_plans">Not started \nPlans</string>
    <string name="top_sponsor">Top Sponsor</string>
    <string name="completed_plans">Completed \nPlans</string>
    <string name="wrong_email_address">* Wrong email address</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="by_clicking_create">By clicking create account, you are agreeing to our terms of services, payment terms, privacy policy and terms of use. <u><link><font color="#0000ff">read terms</font></link></u></string>
    <string name="read_terms">read terms</string>
    <string name="all_create_budget_text">Create Budget</string>
    <string name="enter_budget_name_text">Enter Budget name</string>
    <string name="enter_budget_cost_text">Enter Budget cost</string>
    <string name="ngn_text">NGN</string>
    <string name="describe_this_budget_text">Describe this budget</string>
    <string name="_200_maximum_words_text">200 maximum words</string>
    <string name="save_budget_and_add_new_budget_text">Save budget and add new budget</string>
    <string name="save_and_continue_text">Save and continue</string>
    <string name="create_step_text">Let\'s Create Your Step</string>
    <string name="ngn_400_000_00">NGN 400,000.00</string>
    <string name="target_amount_text">Target Amount</string>
    <string name="step_name_text">Enter Step Name</string>
    <string name="edit_step_description_text">Edit step description</string>
    <string name="enter_step_duration_text">Enter step duration</string>
    <string name="weeks_text">Weeks</string>
    <string name="select_budgets_for_this_step_text">Add budgets to this step</string>
    <string name="do_not_have_a_budget_yet_create_new_budget_text">Do not have a budget yet? Create new budget</string>
    <string name="save_and_add_new_step_text">Save and add new step</string>
    <string-array name="weeks">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string name="plan_analytics">Plan Analytics</string>
    <string name="full_name">Full Name</string>
    <string name="minimum_of_8_characters">* Minimum of 8 characters</string>
    <string name="special_characters">* Special characters</string>
    <string name="numbers">* Numbers</string>
    <string name="project">Projects</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="not_started_a_plan">Patience, you have not started any plan yet. Please start a plan to view plans.</string>
    <string name="choose_plan_sector">Choose plan sector</string>
    <string name="use_template">Use template</string>
    <string name="gallery">Gallery</string>
    <string-array name="Choose_business_Sector">
        <item>Technology</item>
        <item>Agriculture</item>
        <item>Professional Services</item>
        <item>Retail</item>
        <item>Artisan</item>
        <item>Hair and Beauty</item>
        <item>Financial Services</item>
        <item>Health Care</item>
        <item>Catering</item>
        <item>Hospitality</item>
        <item>Others</item>
    </string-array>
    <string-array name="Means_of_support">
        <item>Technology</item>
        <item>Agriculture</item>
        <item>Professional Services</item>
        <item>Retail</item>
        <item>Artisan</item>
        <item>Hair and Beauty</item>
        <item>Financial Services</item>
        <item>Health Care</item>
        <item>Catering</item>
        <item>Hospitality</item>
        <item>Others</item>
    </string-array>
    <string name="notifications">Notifications</string>
    <string name="my_profile">My Profile</string>
    <string name="change_profile_image">Change profile image</string>
    <string name="_0">0</string>
    <string name="total_number_of_plans">Total Number of Plans</string>
    <string name="completed_plans2">Completed Plans</string>
    <string name="full_name2">Full name:</string>
    <string name="none">None</string>
    <string name="emailpat_gmail_com">emailpat@gmail.com</string>
    <string name="email2">Email:</string>
    <string name="_234_8168888888">(+234) 8168888888</string>
    <string name="nationality">Nationality:</string>
    <string name="nigerian">Nigerian</string>
    <string name="phone_number">Phone Number:</string>
    <string name="settings">Settings</string>
    <string name="support">Support</string>
    <string name="about_us">About Us</string>
    <string name="jane_cooper">Jane Cooper</string>
    <string name="view_profile">View profile</string>
    <string name="amount">Amount: <font color='#000000'><b>%1$s %2$s</b></font></string>
    <string name="grace_period_months">Grace period:  <font color='#000000'><b>%1$s  Months</b></font></string>
    <string name="loan_percentage">Loan Percentage: <font color='#000000'><b>%1$s</b></font></string>
    <string name="decline_loan_offer">Decline loan offer</string>
    <string name="accept_loan_offer">Accept loan offer</string>
    <string name="plan_sector">Plan sector: <font color='#000000'><b>%1$s</b></font></string>
    <string name="funding_type">Funding type:  <font color='#000000'><b>%1$s</b></font></string>
    <string name="amount_funded">Amount funded:  <font color='#000000'><b>%1$s</b></font></string>
    <string name="funds_raised">%1s Funds raised</string>
    <string name="tasks_completed">%1$s Tasks Completed</string>
</resources>