<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".authentication.RecoverPasswordOtpFragment">

    <TextView
        android:id="@+id/recover_password_password_recovery_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_34dp"
        android:text="@string/password_recovery_text"
        android:fontFamily="@font/helvetica"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize_24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/recover_password_close_to_recovery_textView"
        android:layout_width="@dimen/width_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20dp"
        android:layout_marginEnd="@dimen/margin_54dp"
        android:text="@string/you_re_almost_close_to_recovering_your_password_text"
        android:textSize="@dimen/textSize_15sp"
        android:fontFamily="@font/helvetica"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/recover_password_password_recovery_textView"
        app:layout_constraintTop_toBottomOf="@+id/recover_password_password_recovery_textView" />

    <com.mukesh.OtpView
        android:id="@+id/recover_password_otpView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_100dp"
        android:itemBackground="@drawable/otp_item_background"
        app:OtpItemHeight="@dimen/height_54dp"
        app:OtpItemSpacing="@dimen/spacing_20dp"
        app:OtpItemWidth="@dimen/width_54dp"
        app:OtpViewType="none"
        android:enabled="true"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recover_password_close_to_recovery_textView" />

    <TextView
        android:id="@+id/recover_password_error_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10dp"
        android:text="@string/you_entered_a_wrong_code_text"
        android:textColor="#D91D1D"
        android:textSize="@dimen/textSize_16sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/recover_password_otpView"
        app:layout_constraintStart_toStartOf="@+id/recover_password_otpView"
        app:layout_constraintTop_toBottomOf="@+id/recover_password_otpView" />

    <TextView
        android:id="@+id/recover_password_otp_didnt_receive_email_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10dp"
        android:text="@string/didn_t_recieve_email_resend_text"
        android:textSize="@dimen/textSize_16sp"
        android:fontFamily="@font/helvetica"
        app:layout_constraintEnd_toEndOf="@+id/recover_password_otpView"
        app:layout_constraintStart_toStartOf="@+id/recover_password_otpView"
        app:layout_constraintTop_toBottomOf="@+id/recover_password_error_textView" />




</androidx.constraintlayout.widget.ConstraintLayout>